--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,11 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.2.0",
+    "vue-material": "^1.0.0-beta-11",
+    "vue-template-compiler": "^2.6.10",
+    "vuelidate": "^0.7.4"
   },
   "eslintConfig": {
     "root": true,
