--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,10 @@
 {
   "name": "node-mail-recaptcha-server",
-  "version": "0.0.1",
-  "description": "Send email from a recaptcha-verified form using Node & Express",
+  "version": "0.1.0",
+  "description": "Send email from a recaptcha-verified form using Node & Express and retrieve them from Mongodb",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon -r dotenv/config app.js"
   },
   "author": "zaslow",
   "license": "ISC",
