--- a/client/package.json
+++ b/client/package.json
@@ -10,16 +10,17 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-recaptcha": "^1.3.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.10.0",
     "@vue/cli-plugin-eslint": "^3.10.0",
-    "@vue/cli-service": "^3.10.0",
+    "@vue/cli-service": "^4.1.2",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.1",
     "sass-loader": "^7.2.0",
     "vue-material": "^1.0.0-beta-11",
     "vue-template-compiler": "^2.6.10",
@@ -35,9 +36,12 @@
       "eslint:recommended"
     ],
     "rules": {
-      "max-len": ["error", {
-        "code": 100
-      }]
+      "max-len": [
+        "error",
+        {
+          "code": 100
+        }
+      ]
     },
     "parserOptions": {
       "parser": "babel-eslint"
