Adds email HTML template; Adds Recaptcha validation

--- a/server/dev.env
+++ b/server/dev.env
@@ -1,6 +1,4 @@
-EMAIL_HOST=smtp.gmail.com
 EMAIL_PASSWORD=TesterUser3030
 EMAIL_PREFIX=YMBC
-EMAIL_SERVICE=gmail
 EMAIL_USERNAME=tester.user.3030@gmail.com
-PORT=3000
+RECAPTCHA_SECRET_KEY=6Le1YNMUAAAAAH83zlnopEDCMCb0khXFhyQG8WlR
