--- a/server/package.json
+++ b/server/package.json
@@ -4,13 +4,15 @@
   "description": "Send email from a recaptcha-verified form using Node & Express and retrieve them from Mongodb",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon -r dotenv/config app.js"
+    "start": "nodemon -r dotenv/config app.js dotenv_config_path=./dev.env"
   },
   "author": "zaslow",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "es6-template-strings": "^2.0.1",
     "express": "^4.17.1",
     "nodemailer": "^6.3.0"
   },
