--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
-    "vue-recaptcha": "^1.3.0"
+    "vue-recaptcha": "^1.3.0",
+    "vue-router": "^3.1.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.10.0",
