Adds initial MongoDB implementation

--- a/server/.env.defaults
+++ b/server/.env.defaults
@@ -1,4 +1,6 @@
 EMAIL_HOST=smtp.gmail.com
 EMAIL_SERVICE=gmail
+DB_NAME=MEVN
+DB_URI=mongodb://localhost:27017
 PORT=3000
 RECAPTCHA_URI=https://www.google.com/recaptcha/api/siteverify
