--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "dotenv-defaults": "^1.1.1",
     "es6-template-strings": "^2.0.1",
     "express": "^4.17.1",
+    "mongodb": "^3.5.6",
     "nodemailer": "^6.3.0"
   },
   "devDependencies": {
