--- a/server/package.json
+++ b/server/package.json
@@ -12,14 +12,12 @@
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.0.0",
     "dotenv-defaults": "^1.1.1",
     "es6-template-strings": "^2.0.1",
     "express": "^4.17.1",
     "mongodb": "^3.5.6",
-    "nodemailer": "^6.3.0"
-  },
-  "devDependencies": {
-    "dotenv": "^8.0.0",
+    "nodemailer": "^6.3.0",
     "nodemon": "^1.19.1"
   }
 }
